# lagoon

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  samconfig.toml  template.yml
.github/: CODEOWNERS  settings.yml
.github/workflows/: codeql.yml  publish.yml  test.yml  version.yml
bkup/: WriteReq.java  samconfig.toml
bkup/dag/: Makefile
cli/: .gitignore  Cargo.toml
cli/src/: cli.rs  command.rs  main.rs  utils.rs
cli/src/command/: deploy.rs  pipeline.rs
cli/src/command/deploy/: cli.rs  execute.rs  execute_load.rs  execute_log.rs  execute_pipeline.rs  execute_prepare.rs  execute_write.rs  module.rs
cli/src/command/initialize/: cli.rs  execute.rs
cli/src/command/pipeline/: cli.rs  execute.rs
cli/src/utils/: cf_deploy.rs  docker.rs  ecr_repository.rs  kms_key.rs  resource_name.rs  s3_bucket.rs  sts_account.rs  zip_dir.rs
dag/: samconfig.toml  template.yml
example/dbt/: .dockerignore  Dockerfile  constants.py  dagster.yaml  defs.py  requirements.txt  schedules.py
pipeline/agent/: template.yml
pipeline/dbt/: .gitignore  assets.py  samconfig.toml  template.yml
src/load/: Makefile  template.yml
src/log/: Makefile  samconfig.toml  template.yml
src/macro/: Makefile  samconfig.toml  template.yml
src/pipeline/: Dockerfile  Makefile  athena-catalog.yml  dagster.yaml  requirements.txt  template.yml  workspace.yaml
src/prepare/: Makefile  samconfig.toml  template.yml
src/storage/: Makefile  access-point.yml  access-role.yml  bucket.yml  samconfig.toml  template.yml
src/write/: Makefile  dlq.yml  event-bus.yml  event-rule.yml  (+3 more)
(+331 files in other folders)
